// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Karma Package transformer should work with mocha configs 1`] = `
{
  "devDependencies": {
    "karma": "^6.4.0",
    "karma-chrome-launcher": "^3.1.1",
    "karma-firefox-launcher": "^2.1.2",
    "karma-mocha": "^2.0.1",
  },
  "greenkeeper": {
    "ignore": [
      "karma",
      "karma-chrome-launcher",
      "karma-firefox-launcher",
      "karma-mocha",
    ],
  },
  "metapak": {
    "configs": [
      "mocha",
      "karma",
    ],
    "data": {
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": {
    "karma": "karma start karma.conf.js",
    "test": "npm run karma",
  },
}
`;

exports[`Karma Package transformer should work with some files 1`] = `
{
  "devDependencies": {
    "karma": "^6.4.0",
    "karma-chrome-launcher": "^3.1.1",
    "karma-firefox-launcher": "^2.1.2",
  },
  "greenkeeper": {
    "ignore": [
      "karma",
      "karma-chrome-launcher",
      "karma-firefox-launcher",
    ],
  },
  "metapak": {
    "configs": [
      "karma",
    ],
    "data": {
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": {
    "karma": "karma start karma.conf.js",
    "test": "npm run karma",
  },
}
`;
